frontend/k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 3000 # Update this to match your application’s container port
  selector:
    deployment.name: frontend # Match labels in your Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      deployment.name: frontend
  template:
    metadata:
      labels:
        deployment.name: frontend
    spec:
      containers:
      - name: frontend
        image: gitlab.lnu.se:5050/2dv013/student/team-2024-03-pikachu/frontend/front
        ports:
          - containerPort: 3000
            name: http
        resources:
         # Scale the pods based on the CPU usage
          requests:
            cpu: 200m
          limits:
            cpu: 500m
      imagePullSecrets:
      - name: regcred
